--- a/src/app/games/game-list/game-list.component.html
+++ b/src/app/games/game-list/game-list.component.html
@@ -8,7 +8,6 @@
 </div>
 
 <table mat-table *ngIf="games" [dataSource]="dataSource" class="mat-elevation-z8">
-    
     <!--Title Column-->
     <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef>Title</th>
@@ -48,7 +47,7 @@
     <!--Status Column-->
     <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let game">{{game.status=='true' ? "Available": "Unavailable"}}</td>
+        <td mat-cell *matCellDef="let game">{{game.status=='true' ? "Active": "Inactive"}}</td>
     </ng-container>
 
     <!-- Actions Column -->
